# spot

./: .dev.vars.example  .gitignore  CITATION.cff  CLAUDE.md  DATA_LICENSES.md  DATA_POLICY.md  LICENSE  NOTICE  README.md  THIRD_PARTY_NOTICES.md  infra.env  justfile  pyproject.toml  requirements-dev.in  wrangler.jsonc
01_phenotypes/: README.md
01_programs/: README.md  (+1 more)
api/: pyproject.toml
api/src/spot_api/: __init__.py  main.py
api/tests/: test_health.py
contracts/: pyproject.toml
contracts/src/spot_contracts/: __init__.py  manifest.py  models.py
contracts/tests/: test_manifest.py  test_models.py
core/: pyproject.toml
core/src/spot_core/: __init__.py
core/tests/: test_smoke.py
pipeline/: .dockerignore  README.md  main.nf  pyproject.toml
pipeline/_template/dataset/: manifest.yaml
pipeline/src/spot_pipeline/: __init__.py  driver.py  qc.py
pipeline/stages/cellqc/: Dockerfile  cellqc.py
pipeline/stages/de/: Dockerfile  de.R
pipeline/stages/fastp/: Dockerfile  entrypoint.sh
pipeline/stages/fetch/: Dockerfile  entrypoint.sh
pipeline/stages/guide/: Dockerfile  entrypoint.sh
pipeline/stages/starsolo/: Dockerfile  entrypoint.sh
pipeline/tests/: conftest.py  test_driver.py  test_e2e_fixtures.py  test_qc.py
pipeline/tests/e2e/: make_fixtures.py  run_e2e.sh
pipeline/tests/e2e/fixtures/: manifest.yaml
pipeline/tests/e2e/fixtures/guides/: features.tsv  guides.fa  t2g.txt
pipeline/tests/e2e/fixtures/reference/: mini.fa  mini.gtf  whitelist.txt
pipeline/tests/fixtures/: invalid_floating_tag.yaml  invalid_no_ntc.yaml  valid.yaml
(+1475 files in other folders)
