[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spot-api"
version = "0.0.0"
description = "spot API service (Lane A)"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.115,<1", "uvicorn>=0.30,<1"]

[tool.setuptools.packages.find]
where = ["src"]
