[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spot-contracts"
version = "0.0.0"
description = "spot shared Hit/Evidence contract (Lane A <-> Lane B seam)"
requires-python = ">=3.12"
dependencies = ["pydantic>=2,<3"]

[tool.setuptools.packages.find]
where = ["src"]
