[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spot-core"
version = "0.0.0"
description = "spot deterministic evidence engine (Lane A)"
requires-python = ">=3.12"
dependencies = ["numpy>=2,<3"]

[tool.setuptools.packages.find]
where = ["src"]
