[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spot-pipeline"
version = "0.0.0"
description = "spot from-raw Perturb-seq ingest driver (manifest gate + run plan)"
requires-python = ">=3.12"
dependencies = ["pydantic>=2,<3", "pyyaml>=6,<7", "spot-contracts"]

[project.scripts]
spot-pipeline = "spot_pipeline.driver:main"

[tool.setuptools.packages.find]
where = ["src"]
